--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -1,5 +1,5 @@
 <div class="common-page-form-field">
     {% macro render_field(field) %}
-    <b>{{ field.label }}</b> {{ field(**kwargs)|safe }} <br> 
+    <b>{{ field.label }}</b> <br> {{ field(**kwargs)|safe }} <br> 
     {% endmacro %}  
 </div>
