--- a/templates/results.html
+++ b/templates/results.html
@@ -11,19 +11,19 @@
 <h1 style="text-align: center">Education Pathways</h1>
 
 <body>
-    {% from "_formhelpers.html" import render_field %}
-    <h3>Search for courses</h3>
-    <form class="common-page-form" method="post">
-      <dl>
-        {{ render_field(form.select) }}
-        <p>
-            Restrict by one of: {{ render_field(form.divisions) }} or {{ render_field(form.departments) }} or {{ render_field(form.campuses) }}
-        </p> 
-        <p>
-        {{ render_field(form.search) }}
-      </p></dl>
-      <p>{{render_field(form.top)}} <button class="btn btn-primary common-page-submit-btn" type="submit">Search</button>
-    </p></form>
+  {% from "_formhelpers.html" import render_field %}
+  <h3>Search for courses</h3>
+  <form class="common-page-form" method="post">
+    <dl>
+      {{ render_field(form.select) }}
+      <p>
+         <br> Restrict by one of: <br><br> {{ render_field(form.divisions) }} <br> or {{ render_field(form.departments) }} <br> or {{ render_field(form.campuses) }}
+      </p> 
+      <p>
+      {{ render_field(form.search) }}
+    </p></dl>
+    <p>{{render_field(form.top)}} <button class="btn btn-primary common-page-submit-btn" type="submit">Search</button>
+  </p></form>
     
 <h3>Search Results</h3>
 <div id="results-page-table-container">
