Moved style folder to static folder

--- a/templates/results.html
+++ b/templates/results.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Education Pathways</title>
-    <link rel="stylesheet" type="text/css" href="/styles/common.css">
-    <link rel="stylesheet" type="text/css" href="/styles/results.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/common.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/results.css">
 </head>
 <a href="https://carte.utoronto.ca/" target="_blank"><img src="/static/CARTE_logo.jpg" class="img-fluid" style="max-width: 25%"></a>
 <h1 style="text-align: center">Education Pathways</h1>
