--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Education Pathways</title>
-    <link rel="stylesheet" type="text/css" href="/styles/common.css">
-    <link rel="stylesheet" type="text/css" href="/styles/home.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/common.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/home.css">
 </head>
 <body>
   <a href="https://carte.utoronto.ca/" target="_blank"><img src="/static/CARTE_logo.jpg" class="img-fluid" style="max-width: 25%"></a>
